--- a/vercel.json
+++ b/vercel.json
@@ -1,37 +1,18 @@
 {
   "rewrites": [
     {
+      "source": "/dashboard/assets/(.*)",
+      "destination": "/dashboard/dist/assets/$1"
+    },
+    {
+      "source": "/dashboard/(.*)",
+      "destination": "/dashboard/dist/index.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "strict-origin-when-cross-origin"
-        }
-      ]
-    },
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    }
   ]
 }
+
 
