--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,6 @@
 {
-  "rewrites": [
-    {
-      "source": "/dashboard/assets/(.*)",
-      "destination": "/dashboard/dist/assets/$1"
-    },
-    {
-      "source": "/dashboard/(.*)",
-      "destination": "/dashboard/dist/index.html"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist"
 }
 
 
